<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/event_title_capture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title_capture"
         />
    <EditText
        android:id="@+id/event_desc_capture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_desc_capture"
        />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/save_event"
        android:onClick="saveEvent" />



</LinearLayout>
