<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    >
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/event_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_title_capture"
            android:editable="false"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/event_desc_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_desc_capture"
            android:editable="false"
            />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <EditText
            android:id="@+id/start_date_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_date_view"
            android:editable="false"
            android:focusableInTouchMode="false"
            />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <EditText
            android:id="@+id/end_date_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_date_view"
            android:editable="false"
            android:focusableInTouchMode="false"
            />

        </android.support.design.widget.TextInputLayout>




    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/event_cycle_length_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cycle_length"
        android:editable="false"
        android:inputType="number"
        />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/show_person_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />





</LinearLayout>
