<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#D0000000"
    tools:context="com.nicdsmith.test.gamenight.FirstTimeLogIn">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            >
        <EditText
            android:id="@+id/first_name"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/first_name"
            android:textColor="#050505"
            />
        <EditText
            android:id="@+id/last_name"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/last_name"
            android:textColor="#050505"
            />
        <Button
            android:id="@+id/log_in"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name"
            android:layout_marginTop="15dip"
            android:text="@string/log_in"
            android:gravity="center"
            android:layout_gravity="center"
            android:onClick="savePerson"
            />
        </LinearLayout>


    </RelativeLayout>





</android.support.design.widget.CoordinatorLayout>
